<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能锁</string>

    <string name="main_tab_1">商城</string>
    <string name="main_tab_2">社区</string>
    <string name="main_tab_3">钥匙</string>
    <string name="main_tab_4">我的</string>

    <string name="about_title">关于我们</string>
    <string name="about_common_question">常见问题</string>
    <string name="about_instructions">使用说明</string>
    <string name="about_abstracts">盾云简介</string>
    <string name="about_company_name">重庆盾云科技有限公司</string>
    <string name="about_abstracts_text">\t\t\t重庆盾云科技有限公司带着全球领先的技术来到您们身边，为了给您们提供：智能手机蓝牙门锁、智能手机门禁系统、智能手机酒店订退房管理系统、汽车智能蓝牙锁、智能手机停车场管理系统、办公室手机门禁签到系统、RFID智能控制系统、NFC近距离无线识别系统、Zigbee无线通信系统等软、硬件服务方案。\t\n\t\t\t我公司具有自由研发的智能锁APP平台，运用物联网及大数据分析，将带给您更加智能、便捷的社区服务。</string>
    <string name="about_suggestions">意见反馈</string>
    <string name="about_suggestions_tip">请输入内容</string>
    <string name="about_suggestions_limit">最多输入140个字</string>
    <string name="about_suggestions_hint">请输入意见....</string>
    <string name="about_suggestions_dialog">温馨提示</string>
    <string name="about_suggestions_sending">发送中...</string>
    <string name="about_suggestions_sendsuccess">发送成功</string>
    <string name="about_suggestions_sendfail">发送失败</string>
    <string name="about_suggestions_send">确定</string>
    <string name="about_update">版本更新</string>

    <string name="et_userName">手机号</string>
    <string name="et_pass">密码</string>
    <string name="et_auth_code">验证码</string>
    <string name="cb_save">保存用户名和密码</string>
    <string name="bt_login">登录</string>
    <string name="bt_reg">注册</string>
    <string name="main_version">重庆盾云科技有限公司</string>

    <string name="login_username_input_tips">请输入手机号</string>
    <string name="key_name_input_tips">请输入钥匙名称</string>
    <string name="login_password_input_tips">请输入密码</string>
    <string name="code_input_tips">请输入验证码</string>
    <string name="login_progressDialog_title">温馨提示</string>
    <string name="login_progressDialog_content">正在登录...</string>
    <string name="login_username_inexist">用户名不存在</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_failed">登录失败</string>
    <string name="login_forget_passwd">忘记密码</string>
    <string name="login_regist_txt">注册账号</string>

    <string name="system_set">系统设置</string>
    <string name="system_feedback">意见反馈</string>
    <string name="system_about_us">关于我们</string>
    <string name="system_update_passwore">修改登录密码</string>
    <string name="system_exit_account">退出账号</string>

    <string name="gesture">手势密码</string>
    <string name="msg">消息提醒</string>
    <string name="shop_cart">购物车</string>
    <string name="order">订单</string>
    <string name="update_pwd">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="key_set">钥匙设置</string>

    <string name="me_setting_alert">远程报警</string>
    <string name="me_setting_auth">账户授权</string>
    <string name="me_setting_near">感应开锁</string>
    <string name="me_setting_shake">摇一摇开锁</string>

    <string name="key_setting_add">添加钥匙与修改开门密码</string>
    <string name="key_setting_delete">删除钥匙</string>
    <string name="key_setting_passwd">密码开门</string>
    <string name="key_setting_more">高级设置</string>
    <string name="key_setting_set">常开设置</string>
    <string name="key_setting_update">固件刷新</string>
    <string name="key_setting_set_expert">高级设置</string>
    <string name="key_setting_auth">远程授权</string>

    <string name="me_changename_title">输入昵称....</string>
    <string name="et_new_name_hint">输入昵称....</string>
    <string name="btn_change_name">确定修改</string>
    <string name="et_new_name_tip">请输入昵称</string>

    <string name="update_key_name">钥匙名称</string>
    <string name="update_key_passwd">修改开门密码</string>
    <string name="user_manager">用户管理</string>
    <string name="lock_record">门锁记录</string>
    <string name="lock_auth">远程授权</string>
    <string name="setting">功能设置</string>
    <string name="lock_notif">消息通知</string>
    <string name="lock_share">共享门锁记录</string>

    <string name="key_setting_more_power">电量与门锁状态反馈</string>
    <string name="key_setting_more_clear">清空锁内用户</string>
    <string name="key_setting_more_passwd">修改开门密码</string>
    <string name="key_setting_more_read">读取锁内用户信息</string>

    <string name="update_password_title">修改密码</string>
    <string name="et_old_password_hint">请输入原密码....</string>
    <string name="et_new_password_hint">请输入新密码....</string>
    <string name="et_new_password_check_hint">请再次输入新密码</string>
    <string name="bt_update_password">确定</string>
    <string name="update_progressDialog_content">正在修改...</string>
    <string name="update_password_check_tips">两次密码输入不一致</string>
    <string name="update_old_password_error_tips">原密码输入错误</string>
    <string name="update_password_success">修改成功</string>
    <string name="update_password_failed">修改失败</string>

    <string name="contacts_detail_title">详情</string>
    <string name="phone_label">电话号码:</string>
    <string name="name_label">姓名:</string>
    <string name="input_name">请输入姓名</string>
    <string name="update_user_info_title">修改个人信息</string>

    <string name="update_title">更新提示:</string>
    <string name="update_download_title">下载更新文件</string>
    <string name="update_download_failed">下载失败，</string>
    <string name="update_no_need_update">客户端为最新版本，不需更新</string>
    <string name="update_title_error">获取更新失败，错误码:</string>

    <string name="network_error">请求失败，网络异常</string>

    <string name="module_manager">模块管理</string>


    <string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>

    <string name="action_settings">Settings</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="weixin_request_error">服务器请求错误...</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果:%s</string>
    <string name="pay_unknown_error">未知错误</string>
    <string name="weixin_nonsupport">没有安装微信或者版本不支持...</string>
    <string name="pay_par_error">支付参数错误...</string>
    <string name="authentication_failed">认证被否决...</string>
    <string name="general_errors">一般错误...</string>
    <string name="unable_to_send">发送失败...</string>
    <string name="unsupport_error">不支持错误...</string>
    <string name="user_canceled">取消付款...</string>

</resources>
