<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/me_bg_color">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_header" />

    <LinearLayout
        android:id="@+id/about_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="20dip"
                android:src="@drawable/about_logo" />

            <TextView
                android:id="@+id/about_logo_text"
                style="@style/me_item_txt"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingTop="0dp"
                android:text="2.0.1" />

            <TextView style="@style/me_item_sep1" />

            <LinearLayout
                android:id="@+id/common_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/item_select_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/common_question_text"
                    style="@style/me_item_txt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/about_common_question" />

                <TextView style="@style/me_item_sep1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/instructions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/item_select_bg"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/instructions_text"
                    style="@style/me_item_txt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/about_instructions" />

                <TextView style="@style/me_item_sep1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/abstracts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/item_select_bg"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/abstracts_text"
                    style="@style/me_item_txt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/about_abstracts" />

                <TextView style="@style/me_item_sep1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/suggestions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/item_select_bg"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/suggestions_text"
                    style="@style/me_item_txt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/about_suggestions" />

                <TextView style="@style/me_item_sep1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/version_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/item_select_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/version_update_text"
                    style="@style/me_item_txt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="14dp"
                    android:paddingTop="14dp"
                    android:text="@string/about_update" />

                <TextView style="@style/me_item_sep1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/version_txt_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dip"
            android:gravity="center"
            android:text="@string/about_company_name"
            android:textColor="@color/black"
            android:textSize="12sp"></TextView>
    </LinearLayout>
</RelativeLayout>