<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_header" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/lay_old_password"
            style="@style/me_item_relativeLayout"
            android:paddingBottom="0dp"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tv_oldpasswd"
                style="@style/me_item_txt"
                android:text="原密码" />

            <CheckBox
                android:id="@+id/cb_passwd_old"
                style="@style/passwd_right_checkbox"
                android:checked="false"
                android:padding="10dip" />

            <EditText
                android:id="@+id/et_old_password"
                style="@style/normal_edit_bg"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dip"
                android:layout_toLeftOf="@id/cb_passwd_old"
                android:layout_toRightOf="@id/tv_oldpasswd"
                android:hint="@string/et_old_password_hint"
                android:maxLength="20"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:password="true" />

        </RelativeLayout>

        <TextView style="@style/me_item_sep1" />


        <RelativeLayout
            android:id="@+id/lay_new_password"
            style="@style/me_item_relativeLayout"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"

            >

            <TextView
                android:id="@+id/tv_newpasswd"
                style="@style/me_item_txt"
                android:text="新密码"

                />

            <CheckBox
                android:id="@+id/cb_passwd_new"
                style="@style/passwd_right_checkbox"
                android:checked="false"
                android:padding="10dip" />

            <EditText
                android:id="@+id/et_new_password"
                style="@style/normal_edit_bg"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dip"
                android:layout_toLeftOf="@id/cb_passwd_new"
                android:layout_toRightOf="@id/tv_newpasswd"
                android:gravity="center_vertical"
                android:hint="@string/et_new_password_hint"
                android:maxLength="20"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:password="true" />

        </RelativeLayout>

        <TextView style="@style/me_item_sep1" />

        <RelativeLayout
            android:id="@+id/lay_new_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/update_password"
            android:visibility="gone">


            <EditText
                android:id="@+id/et_new_password_check"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:background="@color/white"
                android:drawablePadding="5dip"
                android:hint="@string/et_new_password_check_hint"
                android:maxLength="20"
                android:password="true"
                android:textColor="@color/main_txt_color"
                android:textSize="16dp" />
        </RelativeLayout>

        <TextView style="@style/me_item_sep1" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_update"
        style="@style/blue_btn_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/about_suggestions_send" />

</RelativeLayout>
